module(
    name = "examples_aliased-dependency",
    version = "1.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_synology", repo_name = "other_random_name")

# When reusing for your own project, don't use this local-override
local_path_override(
    module_name = "rules_synology",
    path = "../..",
)

# this example doesn't need cross-compile, so needs no toolchains

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# Application icon, sourced from the cncf.io site
http_file(
    name = "tux_icon",
    sha256 = "e4f4c8010312078a37ca1797a8c9eaa5156d0fec407d7875522ca31a3d78c586",
    urls = [
        "https://upload.wikimedia.org/wikipedia/commons/a/af/Tux.png",
    ],
)
