module(
    name = "examples_example-server",
    version = "1.0",
)

bazel_dep(name = "gazelle", version = "0.39.0", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.50.1", dev_dependency = True)

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_synology")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "screaming_goat",
    sha256 = "030c1aadeaf9b7b01b27d4966a64173fbfe2e0eea2ec3577543fb8838c3013f0",
    urls = [
        "https://dehayf5mhw1h7.cloudfront.net/wp-content/uploads/sites/816/2019/01/22193028/Screaming-Goat-832-832x476.jpg",
    ],
)

# When reusing for your own project, don't use this local-override
local_path_override(
    module_name = "rules_synology",
    path = "../..",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

#Download toolchain for this version for both host and some platform targets (maybe the right ones)
go_sdk.download(version = "1.22.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Include *direct* Go dependencies
use_repo(go_deps, "org_golang_google_grpc", "org_golang_x_net", "org_uber_go_atomic", "org_uber_go_zap")

# register toolchains by wildcard :) (thanks, github/cameron-martin)
register_toolchains("@rules_synology//toolchains:all")
