load(":name-version-sha.bzl", "binaries")

filegroup(
    name = "group",
    srcs = binaries(),
    visibility = ["//visibility:public"],
)

alias(
    name = "bazelisk",
    actual = select({
        #"//models:arm": "@bazelisk_darwin_arm64//file:bazelisk",  # expected not to work yet (enabled to permit parsing)
        "@platforms//cpu:arm": "@bazelisk_darwin_arm64//file:bazelisk",
        #"//models:x86": "@bazelisk_darwin_amd64//file:bazelisk",  # expected not to work yet (enabled to permit parsing)
        "@platforms//cpu:x86_64": "@bazelisk_darwin_amd64//file:bazelisk",
        # "//conditions:default": "@bazelisk_darwin_amd64//file:bazelisk",  # disabled to avoid hiding failures
    }),
)
