load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "api",
    embed = [":helloworld_go_proto"],
    importpath = "github.com/chickenandpork/bazel-spk-go-grpc-simpleserver/api",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "helloworld_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/chickenandpork/bazel-spk-go-grpc-simpleserver/api",
    proto = ":helloworld_proto",
    visibility = ["//visibility:public"],
)
