load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "helloworld_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/chickenandpork/rules_synology/examples/example-server/api",
    proto = ":helloworld_proto",
    visibility = ["//visibility:public"],
)
