load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

go_library(
    name = "api",
    embed = [":helloworld_go_proto"],
    importpath = "github.com/chickenandpork/rules_synology/examples/example-server/api",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "helloworld_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/chickenandpork/rules_synology/examples/example-server/api",
    proto = ":helloworld_proto",
    visibility = ["//visibility:public"],
)
